--- a/arch/arm/configs/vigor_aosp_defconfig
+++ b/arch/arm/configs/vigor_aosp_defconfig
@@ -171,10 +171,10 @@ CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_SIO=y
 # CONFIG_IOSCHED_VR is not set
 # CONFIG_DEFAULT_DEADLINE is not set
-# CONFIG_DEFAULT_ROW is not set
+CONFIG_DEFAULT_ROW=y
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_SIO=y
-CONFIG_DEFAULT_IOSCHED="sio"
+# CONFIG_DEFAULT_SIO is not set
+CONFIG_DEFAULT_IOSCHED="row"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -415,8 +415,8 @@ CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_CMDLINE_OPTIONS=y
 CONFIG_2DGPU_OVERCLOCK=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=1512000
-CONFIG_MSM_CPU_FREQ_MIN=192000
+CONFIG_MSM_CPU_FREQ_MAX=1620000
+CONFIG_MSM_CPU_FREQ_MIN=384000
 CONFIG_MSM_CPU_FREQ_ONDEMAND_MAX=384000
 CONFIG_MSM_CPU_FREQ_ONDEMAND_MIN=245760
 # CONFIG_MSM_AVS_HW is not set
