--- a/arch/arm/configs/vigor_aosp_defconfig
+++ b/arch/arm/configs/vigor_aosp_defconfig
@@ -1,7 +1,3 @@
-#
-# Automatically generated make config: don't edit
-# Linux/arm 3.0.73-ck1 Kernel Configuration
-#
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
 CONFIG_HAVE_SCHED_CLOCK=y
@@ -412,7 +408,7 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 CONFIG_MSM_SDIO_SMEM=y
 CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
-# CONFIG_GPU_OVERCLOCK is not set
+CONFIG_GPU_OVERCLOCK=y
 CONFIG_MSM_MPDEC=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_CMDLINE_OPTIONS=y
@@ -668,7 +664,7 @@ CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
 CONFIG_INTELLI_MAX_ACTIVE_FREQ=1512000
 CONFIG_INTELLI_MAX_INACTIVE_FREQ=486000
 # CONFIG_SEC_LIMIT_MAX_FREQ is not set
-CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+# CONFIG_CPU_FREQ_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
@@ -1802,6 +1798,7 @@ CONFIG_THERMAL_TSENS8x60=y
 CONFIG_THERMAL_MONITOR=y
 # CONFIG_WATCHDOG is not set
 CONFIG_SSB_POSSIBLE=y
+
 
 #
 # Sonics Silicon Backplane
