--- a/arch/arm/configs/vigor_auto_defconfig
+++ b/arch/arm/configs/vigor_auto_defconfig
@@ -403,13 +403,14 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 CONFIG_MSM_SDIO_SMEM=y
 CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
+CONFIG_GPU_OVERCLOCK=y
 CONFIG_MSM_MPDEC=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_CMDLINE_OPTIONS=y
 CONFIG_2DGPU_OVERCLOCK=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=1512000
-CONFIG_MSM_CPU_FREQ_MIN=192000
+CONFIG_MSM_CPU_FREQ_MAX=1620000
+CONFIG_MSM_CPU_FREQ_MIN=384000
 CONFIG_MSM_CPU_FREQ_ONDEMAND_MAX=384000
 CONFIG_MSM_CPU_FREQ_ONDEMAND_MIN=245760
 # CONFIG_MSM_AVS_HW is not set
@@ -742,9 +743,9 @@ CONFIG_INET_XFRM_MODE_TUNNEL=y
 # CONFIG_INET_LRO is not set
 # CONFIG_INET_DIAG is not set
 CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_TCP_CONG_WESTWOOD=y
-CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_HTCP=y
 CONFIG_TCP_CONG_HSTCP=y
 CONFIG_TCP_CONG_HYBLA=y
@@ -755,7 +756,15 @@ CONFIG_TCP_CONG_VENO=y
 CONFIG_TCP_CONG_YEAH=y
 CONFIG_TCP_CONG_ILLINOIS=y
 CONFIG_TCP_CONG_SOCIOPATH=y
+# CONFIG_DEFAULT_BIC is not set
+# CONFIG_DEFAULT_CUBIC is not set
+# CONFIG_DEFAULT_HTCP is not set
+# CONFIG_DEFAULT_HYBLA is not set
+# CONFIG_DEFAULT_VEGAS is not set
+# CONFIG_DEFAULT_VENO is not set
 CONFIG_DEFAULT_WESTWOOD=y
+# CONFIG_DEFAULT_SOCIOPATH is not set
+# CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_HTC_NETWORK_MODIFY=y
@@ -1052,8 +1061,8 @@ CONFIG_BT_SCO=y
 CONFIG_BT_RFCOMM=y
 CONFIG_BT_RFCOMM_TTY=y
 CONFIG_BT_BNEP=y
-# CONFIG_BT_BNEP_MC_FILTER is not set
-# CONFIG_BT_BNEP_PROTO_FILTER is not set
+CONFIG_BT_BNEP_MC_FILTER=y
+CONFIG_BT_BNEP_PROTO_FILTER=y
 CONFIG_BT_HIDP=y
 
 #
@@ -1243,12 +1252,12 @@ CONFIG_DM_CRYPT=y
 # CONFIG_DM_SNAPSHOT is not set
 # CONFIG_DM_MIRROR is not set
 # CONFIG_DM_RAID is not set
-CONFIG_DM_CACHE=y
 # CONFIG_DM_ZERO is not set
 # CONFIG_DM_MULTIPATH is not set
 # CONFIG_DM_DELAY is not set
 # CONFIG_DM_UEVENT is not set
 # CONFIG_DM_FLAKEY is not set
+CONFIG_DM_CACHE=y
 CONFIG_NETDEVICES=y
 # CONFIG_IFB is not set
 CONFIG_DUMMY=y
@@ -2176,7 +2185,7 @@ CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_DEVICE_CLASS=y
 # CONFIG_USB_DYNAMIC_MINORS is not set
 CONFIG_USB_SUSPEND=y
-# CONFIG_USB_OTG is not set
+CONFIG_USB_OTG=y
 # CONFIG_USB_OTG_WHITELIST is not set
 # CONFIG_USB_OTG_BLACKLIST_HUB is not set
 # CONFIG_USB_MON is not set
@@ -2283,46 +2292,38 @@ CONFIG_USB_GADGET_DUALSPEED=y
 # CONFIG_USB_MIDI_GADGET is not set
 # CONFIG_USB_G_PRINTER is not set
 CONFIG_USB_G_ANDROID=y
-# CONFIG_USB_ANDROID_ACM is not set
-CONFIG_USB_ANDROID_ADB=y
-CONFIG_USB_ANDROID_DIAG=y
-CONFIG_USB_ANDROID_MDM9K_DIAG=y
-CONFIG_USB_ANDROID_MDM9K_MODEM=y
-CONFIG_USB_ANDROID_MASS_STORAGE=y
-CONFIG_USB_ANDROID_MTP=y
-CONFIG_USB_ANDROID_RNDIS=y
-# CONFIG_USB_ANDROID_RMNET is not set
+# CONFIG_USB_CDC_COMPOSITE is not set
+# CONFIG_USB_G_MULTI is not set
+# CONFIG_USB_G_HID is not set
+# CONFIG_USB_G_DBGP is not set
+CONFIG_USB_CSW_HACK=y
+# CONFIG_USB_MSC_PROFILING is not set
+CONFIG_MODEM_SUPPORT=y
 CONFIG_RMNET_SMD_CTL_CHANNEL=""
 CONFIG_RMNET_SMD_DATA_CHANNEL=""
-# CONFIG_USB_ANDROID_RMNET_SDIO is not set
 CONFIG_RMNET_SDIO_CTL_CHANNEL=8
 CONFIG_RMNET_SDIO_DATA_CHANNEL=8
-CONFIG_USB_ANDROID_RMNET_SMD_SDIO=y
 CONFIG_RMNET_SMD_SDIO_CTL_CHANNEL=8
 CONFIG_RMNET_SMD_SDIO_DATA_CHANNEL=8
 CONFIG_RMNET_SDIO_SMD_DATA_CHANNEL="DATA40"
 # CONFIG_USB_ANDROID_RMNET_CTRL_SMD is not set
 # CONFIG_USB_F_SERIAL is not set
-CONFIG_MODEM_SUPPORT=y
-CONFIG_USB_ANDROID_SERIAL=y
-CONFIG_USB_ANDROID_PROJECTOR=y
-CONFIG_USB_ANDROID_ECM=y
 # CONFIG_USB_F_SERIAL_SDIO is not set
 # CONFIG_USB_F_SERIAL_SMD is not set
-CONFIG_USB_ANDROID_USBNET=y
 # CONFIG_USB_CDC_COMPOSITE is not set
 # CONFIG_USB_G_MULTI is not set
 # CONFIG_USB_G_HID is not set
 # CONFIG_USB_G_DBGP is not set
 # CONFIG_USB_ACCESSORY_DETECT_BY_ADC is not set
-# CONFIG_USB_CSW_HACK is not set
+CONFIG_USB_CSW_HACK=y
 CONFIG_USB_GADGET_VERIZON_PRODUCT_ID=y
+CONFIG_USB_HTC_SWITCH_STUB=y
 
 #
 # OTG and related infrastructure
 #
 CONFIG_USB_OTG_UTILS=y
-# CONFIG_USB_OTG_WAKELOCK is not set
+CONFIG_USB_OTG_WAKELOCK=y
 # CONFIG_USB_GPIO_VBUS is not set
 # CONFIG_USB_ULPI is not set
 # CONFIG_USB_MSM_OTG_72K is not set
@@ -2523,12 +2524,15 @@ CONFIG_ANDROID_EVENTS_LOG_SIZE=256
 # CONFIG_LINE6_USB is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
-CONFIG_XVMALLOC=y
-CONFIG_ZRAM=y
-CONFIG_ZRAM_SNAPPY=y
 CONFIG_SNAPPY_COMPRESS=y
 CONFIG_SNAPPY_DECOMPRESS=y
+CONFIG_XVMALLOC=y
+CONFIG_ZRAM=y
+CONFIG_ZRAM_NUM_DEVICES=1
+CONFIG_ZRAM_DEFAULT_DISKSIZE=100663296
 # CONFIG_ZRAM_DEBUG is not set
+# CONFIG_ZRAM_LZO is not set
+CONFIG_ZRAM_SNAPPY=y
 CONFIG_ZCACHE=y
 # CONFIG_FB_SM7XX is not set
 CONFIG_MACH_NO_WESTBRIDGE=y
@@ -2921,7 +2925,7 @@ CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
-CONFIG_DECOMPRESS_LZO=y
+CONFIG_DECOMPRESS_GZIP=y
 CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_REED_SOLOMON=y
 CONFIG_REED_SOLOMON_ENC8=y
