--- a/arch/arm/configs/vigor_auto_defconfig
+++ b/arch/arm/configs/vigor_auto_defconfig
@@ -756,8 +756,16 @@ CONFIG_TCP_CONG_VENO=y
 CONFIG_TCP_CONG_YEAH=y
 CONFIG_TCP_CONG_ILLINOIS=y
 CONFIG_TCP_CONG_SOCIOPATH=y
-CONFIG_DEFAULT_WESTWOOD=y
-CONFIG_DEFAULT_TCP_CONG="westwood"
+# CONFIG_DEFAULT_BIC is not set
+# CONFIG_DEFAULT_CUBIC is not set
+# CONFIG_DEFAULT_HTCP is not set
+# CONFIG_DEFAULT_HYBLA is not set
+# CONFIG_DEFAULT_VEGAS is not set
+# CONFIG_DEFAULT_VENO is not set
+# CONFIG_DEFAULT_WESTWOOD is not set
+CONFIG_DEFAULT_SOCIOPATH=y
+# CONFIG_DEFAULT_RENO is not set
+CONFIG_DEFAULT_TCP_CONG="sociopath"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_HTC_NETWORK_MODIFY=y
 CONFIG_IPV6=y
