--- a/arch/arm/configs/vigor_aosp_defconfig
+++ b/arch/arm/configs/vigor_aosp_defconfig
@@ -1242,7 +1242,7 @@ CONFIG_LIBRA_SDIOIF=m
 CONFIG_BCMDHD=m
 CONFIG_BCMDHD_FW_PATH="/system/vendor/firmware/fw_bcmdhd.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/proc/calibration"
-# CONFIG_DHD_USE_STATIC_BUF is not set
+CONFIG_DHD_USE_STATIC_BUF=y
 # CONFIG_DHD_USE_SCHED_SCAN is not set
 # CONFIG_DHD_ENABLE_P2P is not set
 # CONFIG_HOSTAP is not set
