--- a/arch/arm/configs/vigor_aosp_defconfig
+++ b/arch/arm/configs/vigor_aosp_defconfig
@@ -168,10 +168,10 @@ CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_SIO=y
 # CONFIG_IOSCHED_VR is not set
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_ROW=y
+# CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_NOOP is not set
-# CONFIG_DEFAULT_SIO is not set
-CONFIG_DEFAULT_IOSCHED="row"
+CONFIG_DEFAULT_SIO=y
+CONFIG_DEFAULT_IOSCHED="sio"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -412,9 +412,9 @@ CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_CMDLINE_OPTIONS=y
 CONFIG_2DGPU_OVERCLOCK=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=1620000
-CONFIG_MSM_CPU_FREQ_MIN=384000
-CONFIG_MSM_CPU_FREQ_ONDEMAND_MAX=384000
+CONFIG_MSM_CPU_FREQ_MAX=1512000
+CONFIG_MSM_CPU_FREQ_MIN=168000
+CONFIG_MSM_CPU_FREQ_ONDEMAND_MAX=168000
 CONFIG_MSM_CPU_FREQ_ONDEMAND_MIN=245760
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
@@ -643,14 +643,14 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_DANCEDANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BADASS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCARY is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVE=y
 CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
 CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CPU_FREQ_GOV_SCARY=y
