--- a/arch/arm/configs/vigor_auto_defconfig
+++ b/arch/arm/configs/vigor_auto_defconfig
@@ -483,6 +483,7 @@ CONFIG_MSM_SPM_V1=y
 # CONFIG_TIWLAN_SDIO is not set
 CONFIG_HTC_BATT_ALARM=y
 # CONFIG_REMOVE_EBI1_FIXED_CLK is not set
+CONFIG_FORCE_FAST_CHARGE=y
 
 #
 # System MMU
