--- a/arch/arm/configs/vigor_aosp_defconfig
+++ b/arch/arm/configs/vigor_aosp_defconfig
@@ -411,7 +411,7 @@ CONFIG_MSM_SDIO_SMEM=y
 CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
 CONFIG_MSM_MPDEC=y
-# CONFIG_GPU_OVERCLOCK is not set
+CONFIG_GPU_OVERCLOCK=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_CMDLINE_OPTIONS=y
 CONFIG_2DGPU_OVERCLOCK=y
